<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDeviceLinkedInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/device_linked_info_false"
        android:textAllCaps="false"
        android:textColor="@color/red_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDeviceLinkedUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/device_linked_url"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceLinkedInfo" />

    <TextView
        android:id="@+id/tvDeviceLinkedUrlData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/device_linked_url_data"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvDeviceLinkedUrl"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceLinkedInfo" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenQRScanner" />

    <Button
        android:id="@+id/btnOpenQRScanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_qr_scanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceLinkedUrl" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space">

        <TextView
            android:id="@+id/tvCaptureSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/capture_select"
            android:textAllCaps="false"
            android:textColor="@color/dark_grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCaptureImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/capture_image" />

        <Button
            android:id="@+id/btnCaptureAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/capture_audio" />

        <Button
            android:id="@+id/btnCaptureVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/capture_video" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>